--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>npm</title>
+	<title>npm!</title>
 </head>
 <body>
-
+<a href="https://docs.npmjs.com/cli/install#limitations-of-npms-install-algorithm">documentation</a>
 </body>
 </html>
