install_packages.html npm install package name  local

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	<title>npm!</title>
 </head>
 <body>
+<a href="https://docs.npmjs.com/cli/install#limitations-of-npms-install-algorithm">official documentation</a>
+<a href="documentation/index.html">local documentation in short from official</a>
 
-<a href="https://docs.npmjs.com/cli/install#limitations-of-npms-install-algorithm">documentation</a>
+
+
+
 </body>
 </html>
